--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.7'
-    implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
-    implementation 'mysql:mysql-connector-java:8.0.29'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.7'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
