--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=midori
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
+#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
