--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
+#\uAC1C\uBC1C\uC774 \uB05D\uB098\uBA74 \uB2E4\uC2DC \uC6D0\uC0C1\uBCF5\uAD6C\uD574\uB193\uC74C
+spring.thymeleaf.cache=false
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
@@ -11,3 +13,5 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
 #spring.jpa.defer-datasource-initialization=true
 spring.jpa.defer-datasource-initialization=true
+
+logging.level.com.example.demo = TRACE
